--- a/template/app.html
+++ b/template/app.html
@@ -13,7 +13,7 @@
 <form class="form">
 	<h2>TV Subscriber </h2>
   <div >
-		<select class="tv" name = "tv_name" id ="uitv">
+		<select class="tv" name = "tv_name" id ="uitv" title="TV Subscriber">
                   <option value="" disabled="disabled" selected="selected">Choose a value</option>
                   <option>0</option>
               <option>1</option>
@@ -22,7 +22,7 @@
 	</div>
   <h2>Movie Subscriber </h2>
   <div >
-		<select class="movie" name = "movie_name" id ="uimovie">
+		<select class="movie" name = "movie_name" id ="uimovie" title="Movie Subscriber">
                   <option value="" disabled="disabled" selected="selected">Choose a value</option>
                   <option>0</option>
               <option>1</option>
@@ -31,25 +31,25 @@
 	</div>
 
   <h2>Subscription Age</h2>
-    <input class="age"  type="text" id="uiage" class="floatLabel" name="age" >
+    <input class="age"  type="text" id="uiage" class="floatLabel" name="age" title="Subscription Age" >
 
     <h2>Average Bill</h2>
-    <input class="bill"  type="text" id="uibill"  name="bill" >
+    <input class="bill"  type="text" id="uibill"  name="bill" title="Average Bill">
   
     <h2>Remaining Contract</h2>
-    <input class="contract"  type="text" id="uicontract" class="floatLabel" name="contract" >
+    <input class="contract"  type="text" id="uicontract" class="floatLabel" name="contract" title="Remaining Contract">
 
     <h2>Service Failure Count</h2>
-    <input class="service"  type="text" id="uiservice"  name="service" >
+    <input class="service"  type="text" id="uiservice"  name="service" title="Service Failure Count">
 
     <h2>Download over limit</h2>
-    <input class="download"  type="text" id="uidownload"  name="download" >
+    <input class="download"  type="text" id="uidownload"  name="download" title="Download Over Limit">
     <h2>Total Usage</h2>
-    <input class="usage"  type="text" id="uiusage" class="floatLabel" name="usage" >
+    <input class="usage"  type="text" id="uiusage" class="floatLabel" name="usage" title="Total Usage" >
 
     <h2>Is in a contract</h2>
   <div >
-		<select class="ct" name = "ct" id ="uict">
+		<select class="ct" name = "ct" id ="uict" title="Contract Status">
                   <option value="" disabled="disabled" selected="selected">Choose a value</option>
                   <option>0</option>
               <option>1</option>
